--- a/web_design/hw/1/index.html
+++ b/web_design/hw/1/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>hw1</title>
-    </head>
-    <body>
-        
-    </body>
+<html>
+	<head>
+		<title>My Introduction</title>
+		<link rel = "stylesheet" href = "styles.css">
+		<link href = "https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel = "stylesheet">
+	</head>
+<body>
+	<h1>a goose</h1>
+	<img src = "assets/selfie.jpg" alt = "cool goose" width = "300">
+	<p>
+		My name's Logan and I am 36 years old.
+		I just graduated with my bachelors in cs last semester.
+		I was fortunate enough to be accepted into the accelerated masters program, and now I am finish up my last two semesters for my grad degree.
+		I'm a veteran, a husband, and a father of two.
+		Before I decided to return to school, I was in the restaurant industry for about 10 years.
+		The industry itself is very intense and physically demanding.  Eventually I got tired of coming home exhausted and not being able to be adequately present as a father or husband.
+		So I gave it all, put in my notice, and decided to use my GI Bill and go to school to pursue something else.
+		Since I was already pretty native with the professional market, I made sure to do my due diligence and research job markets that had really high employee growth --
+		and of course -- fairly high salaries. Thanks for reading!
+	</p>
+
+	
+</body>
 </html>
