restructed file heirarchy. Completed 'goose' and 'vibe' pages.

--- a/web_design/hw/2/pages/soon.html
+++ b/web_design/hw/2/pages/soon.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>home</title>
+    <title>gooses</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
-    <script defer src="../js/index.js"></script> 
+    <script defer src="../js/h/soontxt.js"></script> 
 </head>
 
-<!-- LINES -->
-
+   <!-- LINES -->
+   <hr></hr>
+   <hr2></hr2>
 
 <body>
-    <hr></hr>
-<hr2></hr2>
 
-    
+    <!-- GOOSER -->
     <img class = "gooser" src = "../assets/me/selfie.jpg" alt = "cool goose"></img>
-
-
-    <!-- CONTENT  -->
+    
+    <!-- DYNAMIC HEADER  -->
     <div class = "content">
         <h1 id = "text">
             <span id = "cursor"></span>
         </h1> 
     </div>
 
+
     <!-- SIDEBAR -->
     <nav class = "sidebar">
         <ul>
-            <li><a class = "active" href="index.html">home</a></li>
-            <li><a href ="pages/gooses.html">gooses</a></li>
-            <li><a href="pages/vibes.html">vibes</a></li>
-            <li><a href="pages/soon.html">...soon</a></li>
+            <li><a href="../index.html">home</a></li>
+            <li><a href ="../pages/gooses.html">gooses</a></li>
+            <li><a href="../pages/vibes.html">vibes</a></li>
+            <li><a  class = "active" href="../pages/soon.html">...soon</a></li>
         </ul>
     </nav>
 
